--- a/PI_SMS/PI_SMS/PI_SMS.csproj
+++ b/PI_SMS/PI_SMS/PI_SMS.csproj
@@ -178,6 +178,12 @@
     <Compile Include="SendSMS.Designer.cs">
       <DependentUpon>SendSMS.cs</DependentUpon>
     </Compile>
+    <Compile Include="SendTemplate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SendTemplate.Designer.cs">
+      <DependentUpon>SendTemplate.cs</DependentUpon>
+    </Compile>
     <Compile Include="SystemConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -258,6 +264,9 @@
     </Compile>
     <EmbeddedResource Include="SendSMS.resx">
       <DependentUpon>SendSMS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SendTemplate.resx">
+      <DependentUpon>SendTemplate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SystemConfig.resx">
       <DependentUpon>SystemConfig.cs</DependentUpon>
